clusters/home/apps/pachtop-landing-page/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pachtop-landing-page
  labels:
    app.kubernetes.io/name: pachtop-landing-page
    app.kubernetes.io/instance: pachtop-landing-page
spec:
  replicas: 3
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: pachtop-landing-page
      app.kubernetes.io/instance: pachtop-landing-page
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pachtop-landing-page
        app.kubernetes.io/instance: pachtop-landing-page
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/name: pachtop-landing-page
                app.kubernetes.io/instance: pachtop-landing-page
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: pachtop-landing-page
        imagePullPolicy: IfNotPresent
        image: ghcr.io/pacholoamit/nextjs-portfolio:latest
        ports:
          - name: web
            containerPort: 3000
        startupProbe:
          tcpSocket:
            port: web
          initialDelaySeconds: 60
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 6
