clusters/home/apps/pachtop-landing-page/ingress.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: pachtop-landing-page
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: pachtop-landing-page
  ports:
    - port: 3000
      targetPort: web

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pachtop-landing-page
  namespace: default
  annotations:
      kubernetes.io/ingress.class: nginx
      gethomepage.dev/enabled: "true"
      gethomepage.dev/description: Pachtop Landing Page
      gethomepage.dev/group: Apps/Services
      gethomepage.dev/icon: nuxtjs
      gethomepage.dev/name: Pachtop Landing Page
  labels:
    name: pachtop-landing-page
spec:
  rules:
  - host: pachtop.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pachtop-landing-page
            port: 
              number: 3000
